<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView"
    android:background="@color/main_background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".UserRegLoginActivity">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="100dp"
            android:layout_height="101dp"
            android:padding="15dp"
            android:layout_marginTop="50dp"
            android:layout_gravity="center"
            android:background="@drawable/round"
            app:srcCompat="@drawable/app_logo" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textSize="30sp"
            android:text="@string/Welcome"
            android:textAllCaps="true"
            android:textColor="@color/body_background"
            android:layout_gravity="center"/>

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:padding="50dp"
                android:textSize="17sp"
                android:textColor="@color/white"
                android:text="@string/AppDescription"
                />

        </FrameLayout>


        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:textSize="15sp"
            android:textColor="@color/white"
            android:text="@string/PleaseLoginOrRegister"
            android:layout_gravity="center"/>


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/login_btn"
            android:layout_width="250dp"
            android:layout_height="60dp"
            android:layout_gravity="center_horizontal"
            android:layout_margin="30dp"
            android:background="@drawable/green_button_states"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:text="@string/LoginButton" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/register_btn"
            android:layout_width="250dp"
            android:layout_height="60dp"
            android:layout_gravity="center_horizontal"
            android:layout_margin="10dp"
            android:background="@drawable/blue_button_states"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:text="@string/RegisterButton"
            />
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/admin_login_btn"
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/black"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:text="@string/AdminLogin"
            />
    </LinearLayout>

</ScrollView>