<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView"
    android:background="@color/main_background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".VoteActivity"
    android:fillViewport="true">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="20dp">

        <LinearLayout
            android:layout_width="380dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="20dp"

            android:layout_gravity="center_horizontal"
            android:background="@drawable/header_radius">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingTop="5dp"
                android:hint="Question:"/>

            <TextView
                android:id="@+id/question_title_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:layout_gravity="center_horizontal"
                android:text="@string/QuestionData"
                android:textStyle="bold"
                android:textAllCaps="true"
                android:textColor="@color/white"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="380dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:layout_marginTop="3dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_weight="33.3"
                android:paddingLeft="20dp"
                android:gravity="left|center"
                android:background="@drawable/sub_header_radius"
                android:textColor="@color/white"
                android:text="@string/PollTitle"/>

            <Space
                android:layout_width="10dp"
                android:layout_height="1dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="70">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:gravity="center"
                    android:background="@drawable/sub_header_radius"
                    android:textColor="@color/white"
                    android:text="@string/Topics"/>
            </LinearLayout>

        </LinearLayout>
        <LinearLayout
            android:layout_width="380dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center">

            <TextView
                android:id="@+id/text_view_title_column"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:layout_weight="33.3"
                android:paddingLeft="20dp"
                android:gravity="left|center"
                android:background="@drawable/list_radius"
                android:textColor="@color/gray"
                android:text="@string/PollTitle"/>

            <Space
                android:layout_width="10dp"
                android:layout_height="1dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="70">

                <TextView
                    android:id="@+id/text_view_topic_column"
                    android:layout_width="match_parent"
                    android:layout_height="25dp"
                    android:gravity="center"
                    android:background="@drawable/list_radius"
                    android:textColor="@color/gray"
                    android:text="@string/Topics"/>
            </LinearLayout>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioGroup
                android:id="@+id/vote_radio_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5dp">

                <RadioButton
                    android:layout_width="330dp"
                    android:layout_height="60dp"
                    android:layout_margin="20dp"
                    android:layout_gravity="center"
                    android:background="@drawable/list_radius"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    android:textSize="20dp"
                    android:text="@string/StronglyAgree"/>

                <RadioButton
                    android:layout_width="330dp"
                    android:layout_height="60dp"
                    android:layout_margin="20dp"
                    android:layout_gravity="center"
                    android:background="@drawable/list_radius"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    android:textSize="20dp"
                    android:text="@string/SomewhatAgree"/>
                <RadioButton
                    android:layout_width="330dp"
                    android:layout_height="60dp"
                    android:layout_margin="20dp"
                    android:layout_gravity="center"
                    android:background="@drawable/list_radius"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    android:textSize="20dp"
                    android:text="@string/DontKnow"/>
                <RadioButton
                    android:layout_width="330dp"
                    android:layout_height="60dp"
                    android:layout_margin="20dp"
                    android:layout_gravity="center"
                    android:background="@drawable/list_radius"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    android:textSize="20dp"
                    android:text="@string/SomewhatDisagree"/>
                <RadioButton
                    android:layout_width="330dp"
                    android:layout_height="60dp"
                    android:layout_margin="20dp"
                    android:layout_gravity="center"
                    android:background="@drawable/list_radius"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    android:textSize="20dp"
                    android:text="@string/StronglyDisagree"/>

            </RadioGroup>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/back_btn"
                android:layout_width="150dp"
                android:layout_height="60dp"
                android:background="@drawable/blue_button_states"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:text="@string/BackButton"
                />

            <Space
                android:layout_width="40dp"
                android:layout_height="1dp"/>



            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/vote_btn"
                android:layout_width="150dp"
                android:layout_height="60dp"
                android:background="@drawable/green_button_states"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:text="@string/Vote"/>

        </LinearLayout>

    </LinearLayout>
</ScrollView>