<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView"
    android:background="@color/main_background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageButton
            android:id="@+id/Skip_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right|center_horizontal"
            android:layout_margin="20dp"
            android:padding="10dp"
            android:backgroundTint="@color/white"
            android:background="@drawable/round"
            app:srcCompat="@drawable/ic_baseline_skip_next_24"/>


        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/CompleteProfile"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/personalTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/PersonalDetails"
            android:textColor="@color/body_background"
            android:layout_marginTop="20dp"
            android:textStyle="bold"
            android:textSize="15sp" />

        <FrameLayout
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="20dp"
            android:padding="20dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/input_radius">

            <EditText
                android:id="@+id/input_fname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left|center"
                android:paddingBottom="15dp"
                android:hint="@string/FirstName"
                android:ems="10"
                android:inputType="textPersonName">
                <requestFocus/>
            </EditText>

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@drawable/ic_baseline_person_24"
                android:layout_gravity="right|center"/>
        </FrameLayout>
        <FrameLayout
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="10dp"
            android:padding="20dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/input_radius">

            <EditText
                android:id="@+id/input_lname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left|center"
                android:paddingBottom="15dp"
                android:hint="@string/LastName"
                android:ems="10"
                android:inputType="textPersonName">
                <requestFocus/>
            </EditText>

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@drawable/ic_baseline_person_24"
                android:layout_gravity="right|center"/>
        </FrameLayout>

        <FrameLayout
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="10dp"
            android:padding="20dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/input_radius">

            <EditText
                android:id="@+id/input_age"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left|center"
                android:paddingBottom="15dp"
                android:hint="@string/Age"
                android:ems="10"
                android:inputType="number">
            </EditText>

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@drawable/ic_baseline_child_friendly_24"
                android:layout_gravity="right|center"/>
        </FrameLayout>

        <FrameLayout
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="10dp"
            android:padding="20dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/input_radius">

            <EditText
                android:id="@+id/input_postcode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left|center"
                android:paddingBottom="15dp"
                android:hint="@string/Postcode"
                android:ems="10"
                android:inputType="textPostalAddress">
            </EditText>

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@drawable/ic_baseline_location_on_24"
                android:layout_gravity="right|center"/>
        </FrameLayout>

        <FrameLayout
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="10dp"
            android:padding="20dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/input_radius">

            <EditText
                android:id="@+id/input_phoneNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left|center"
                android:paddingBottom="15dp"
                android:hint="@string/PhoneNumber"
                android:ems="10"
                android:inputType="number">
            </EditText>

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@drawable/ic_baseline_local_phone_24"
                android:layout_gravity="right|center"/>

        </FrameLayout>

        <TextView
            android:id="@+id/interestsTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/body_background"
            android:layout_marginTop="20dp"
            android:textStyle="bold"
            android:text="@string/Interests"
            android:textSize="15sp" />

        <FrameLayout
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:orientation="vertical"
            android:layout_marginTop="10dp"
            android:padding="10dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/input_radius">

            <Spinner
                android:id="@+id/Interest_spinner"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/input_radius"
                android:textAlignment="center"
                />

        </FrameLayout>

        <TextView
            android:id="@+id/PoliticalTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/body_background"
            android:layout_marginTop="20dp"
            android:textStyle="bold"
            android:text="@string/PoliticalView"
            android:textSize="15sp" />

        <FrameLayout
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:orientation="vertical"
            android:layout_marginTop="10dp"
            android:padding="10dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/input_radius">

            <Spinner
                android:id="@+id/Political_spinner"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/input_radius"
                android:textAlignment="center"
                />

        </FrameLayout>
        <TextView
            android:id="@+id/EthnicityTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/body_background"
            android:layout_marginTop="20dp"
            android:textStyle="bold"
            android:text="@string/Ethnicity"
            android:textSize="15sp" />

        <FrameLayout
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:orientation="vertical"
            android:layout_marginTop="10dp"
            android:padding="10dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/input_radius">

            <Spinner
                android:id="@+id/Ethnicity_spinner"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/input_radius"
                android:textAlignment="center"
                />

        </FrameLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/complete_btn"
            android:layout_width="250dp"
            android:layout_height="60dp"
            android:layout_gravity="center_horizontal"
            android:layout_margin="30dp"
            android:background="@drawable/green_button_states"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:text="@string/Complete"
            />



    </LinearLayout>
</ScrollView>